# django_contexter

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pull_request_template.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  codecov.yaml  codeql-analysis.yml  django.yml
django_contexter/models/: apps.py  change_result.py  get_model.py  method_lists.py  method_types.py  model.py  serializer.py  urls.py  views.py
django_contexter/models/errors/: configuration_error.py  err_codes.py  reject_error.py  request_error.py
django_contexter/models/part_of/get_model/: configuration.py  reject.py
django_contexter/models/test/: remake_change_result.py  test_change_result.py  test_get_model.py  test_model.py  test_request_error.py  test_serializer.py  test_views.py
django_contexter/models/test/change_result/: test_config.py  test_hiding.py
django_contexter/models/test/test_change_result/: test_config.py  test_hiding.py
django_contexter/models/test/test_get_model/: configs.py  test_config_errors.py  test_configs.py  test_errors.py  test_methods.py
django_contexter/models/test/test_model/: configs.py  test_config_errors.py  test_configs.py  test_errors.py  test_methods.py
django_contexter/models/test/test_request_error/: test_response.py
django_contexter/models/test/test_serializer/: test_serialize.py
django_contexter/models/test/test_views/: configs.py  test_calls.py  test_main.py  test_third_party.py
docs/source/: conf.py  index.rst  migration_guides.rst  models.rst  requirements.txt
example/: .env.example  manage.py
example/usage/: asgi.py  settings.py  urls.py  wsgi.py
