[tool.poetry]
name = "django-contexter"
version = "1.0.0"
description = "Getting data from Django's backend with REST API"
authors = ["Roman <romantovt31@gmail.com>"]
license = "GNU GPL-3.0"
readme = "README.md"
packages = [{include = "django_contexter"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <=3.10.8"
Django = "^4.1.2"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
redgreenunittest = "^0.1.1"
coverage = "^6.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.2.3"
wemake-python-styleguide = "^0.17.0"
flake8-quotes = "^3.3.1"


[tool.poetry.group.example.dependencies]
python = "^3.8"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
redgreenunittest = "^0.1.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
